[tool.poetry]
name = "fastapi_avito"
version = "0.0.1"
description = "my avito"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
python-dotenv = "^0.19.2"
alembic = "^1.7.5"
passlib = "^1.7.4"
python-jose = "^3.3.0"
isort = "^5.10.1"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"
psycopg2 = "^2.9.3"



[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
